--- a/2 Theorie/2.2.3 Hypothese 3.tex
+++ b/2 Theorie/2.2.3 Hypothese 3.tex
@@ -1,11 +1,8 @@
 \subsection{Hypothese 3}    \label{subsec_2.2.3}
-Laut %\textcite{H3_MFUnterschied} 
-sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, 
-gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen 
-Fähigkeiten bzw. nicht das gleiche Bedürfniss haben, zu reagieren wie Männer. Eine weitere
-Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität
-aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert.
-Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als
-Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese 
-Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher
-Aggressivität.
+The results from a study conducted by \textcite{H2_u_3_Bhogal_2016} showed that males had a higher acceptance of rape myths. Furthermore, it was reported that men displayed a higher level of self-reported physical aggression. It is therefore plausible to assume that men with a higher propensity for aggression have a higher acceptance of violence myths in general.
+
+Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten bzw. nicht das gleiche Bedürfniss haben, zu reagieren wie Männer. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher Aggressivität.
+
+Aufgrund von QUELLEN wird folgende Hypothese abgeleitet: Der Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression wird durch das Geschlecht moderiert.
+
+% Durch die in Kapitel 1.4 jeweiligen Studien von Haj-Yahia (2003), McElligott (2011), George und Martínez (2002) und Acosved und Long (2006) liegt der Gedanken nahe, dass der kulturelle Hintergrund der Betroffenen Auswirkungen auf die Wahrnehmung und daraus resultierende Verantwortungszuschreibung der Gesellschaft hat. Daraus ergibt sich die gerichtete Unterschiedshypothese:
