--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -3,32 +3,35 @@ In diesem Kapitel wird die empirische Bearbeitung der Hypothesen dargestellt. Zu
 
 \section{Stichprobenbeschreibung} \label{sec_3.1}
 % schreiben wie viele insgesamt und wie bereinigt
-Mittels eines Onlinefragbogens wurde die Stichprobe mit $N = 432$ erfasst. Mit $n = 305$ (70.60\%) bilden weibliche Teilnehmer den größten Teil der Gesamtstichprobe ab. Männliche Teilnehmer betrugen 28.9\% ($n = 125$) der Befragten. Des Weiteren gaben 0.5\% ($n = 2$) der Probanden an ein diverses Geschlecht zu haben. Das Durchschnittsalter der Befragten lag bei $M = 33.52$ Jahren ($SD = 13.67$). Eine grafische Darstellung der Altersverteilung ist in Abbildung~\ref{Histogramm Altersverteilung} zu sehen. An ihr lässt sich ablesen, dass der jüngste Teilnehmer 18 Jahre alt war, der älteste betrug ein Alter von 77 Jahren. Es handelt sich dabei um eine unimodale und rechtsschiefe verteilung. \input{3 Methode/Histogramm Altersverteilung.tex}
+Den Onlinefragbogen haben 1317 Personen aufgerufen, von denen 578 Probanden ihn ausgefüllt hatten. Aus dieser Gruppe mussten 145 entfernt werden, da sie den Fragebogen nicht vollständig beantwortet hatten. Aufgrund ungültiger Werte und beleidigender Kommentare musste eine weitere Person entfernt werden. Somit nahmen am Onlinefragbogen eine Stichprobe von $N = 432$ Probanden teil. \input{3 Methode/Histogramm Altersverteilung.tex}
+Mit $n = 305$ (70.60\%) bilden weibliche Teilnehmer den größten Teil der Gesamtstichprobe ab. Männliche Teilnehmer betrugen 28.9\% ($n = 125$) der Befragten. Des Weiteren gaben 0.5\% ($n = 2$) der Probanden an ein diverses Geschlecht zu haben. Das Durchschnittsalter der Teilnehmer lag bei $M = 33.52$ Jahren ($SD = 13.67$). Eine grafische Darstellung der Altersverteilung ist in Abbildung~\ref{Histogramm Altersverteilung} zu sehen. An ihr lässt sich ablesen, dass der jüngste Teilnehmer 18 Jahre alt war, der älteste betrug ein Alter von 77 Jahren. Es handelt sich dabei um eine unimodale und rechtsschiefe verteilung. 
 
 
 
 \section{Untersuchungsdesign}  \label{sec_3.2}
-Die vorliegende Studie ist Teil eines größeren Forschungsprojektes, das weitere vier Arbeiten, mit ihren jeweiligen Schwerpunkten, beinhaltet. Jede dieser Arbeiten beschäftigte sich mit den Themen der häuslichen Gewalt und das der Gewaltmythen. Das Gesamtprojekt wurde der Ethikkommision vorgelegt und wurde präregistriert. 
+Die vorliegende Studie ist Teil eines größeren Forschungsprojektes, das weitere vier Arbeiten, mit ihren jeweiligen Schwerpunkten, beinhaltet. Jede dieser Arbeiten beschäftigte sich mit den Themen der häuslichen Gewalt und das der Gewaltmythen. Das Gesamtprojekt wurde der Ethikkommision vorgelegt und wurde präregistriert. Bevor der Fragebogen zur Erhebung freigegeben werden konnte, lief er einen Pretest vom 30.05.2022 bis 02.06.2022 durch. So konnten mögliche Fehler und Probleme behoben werden, um eine gute Durchführung für die Teilnehmer zu gewährleisten.
 
 Vorraussetzung für die Teilhabe an der Umfrage waren ein internetfähiges Endgerät, die Erreichte Volljährigkeit und eine ausreichende Beherrschung der deutschen Sprache. 
 
-Für die Datengeneration wurde ein Onlinefragbogen erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Der Zugangslink wurde primär über die sozialen Netzwerke WhatsApp, Instagram, Facebook, Telegram und Signal verschickt, weshalb es sich um eine (\textbf{randomiesiert?}) anfallende Stichprobe handelt. 
+Für die Datengeneration wurde ein Onlinefragbogen erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Auf diese weise konnnten der Interview- und der Versuchsleitereffekt vermieden werden. Der Zugangslink wurde primär über die sozialen Netzwerke WhatsApp, Instagram, Facebook, Telegram und Signal verschickt, weshalb es sich um eine anfallende Stichprobe handelt. 
 
 Bezüglich der Erhebungsmethode und -Design handelt es sich bei dieser Arbeit um eine quantitative Querschnittstudie, auf der Basis eines einzigen Messzeitpunktes.
 %Feld-Laborstudie\\
 %effekte\\
-%randomiesiert und warum \\
-%Anfallende Stichprobe (Ad-hoc-Stichprobe)
 
 
 \section{Operationalisierung der Konstrukte}    \label{sec_3.3}
 Damit die Teilnehmer unvoreingenommen die, der Wahrheit ähnelten, fiktiven Fallvignetten bewerten konnten, begann der Fragebogen mit zwei zufällig zugeodneten Vignetten, die psychische oder sexualisierte Gewalt behandelten. Darauf folgte die deutsche Version der Skala zur Erfassung der Akzeptanz von Gewaltmythen. Im Anschluss befand sich eine umfangreiche Testbatterie mit vier Skalen um physische wie verbale Aggression, den Ärger und das Misstrauen zu messen. Abschließend wurden die soziodemografischen Daten wie Alter, Geschlecht, kultureller Hintergrund, Bildungsstand, berufliche Situation und das Einkommen erfragt.
 
-Mithilfe der Fallvignetten zur häuslichen Gewalt wurde die Verantwortungszuschreibung erhoben. Insgesamt wurden 16 unterschiedliche Vignetten generiert, um vier verschiedene Variablen messen zu können. Bei diesen Variablen handelte es sich umd die Gewaltart (psychisch oder sexualisiert), das Geschlecht (männlich oder weiblich), den sozioökonomischen Status (hoch oder niedrig) und um den kulturellen Hintergrund (deutsch oder arabisch). Über einen Schiberegler konnten die Probanden die relative Verantwortung von Opfer und Täter bewerten. Die Codierung verlief vom kleinstmöglichen Punktewert auf der linken Seit bis zum größtmöglichen Punktewert auf der rechten Seite (Codierung 1-101). 
+Mithilfe der Fallvignetten zur häuslichen Gewalt wurde die Verantwortungszuschreibung erhoben. Insgesamt wurden 16 unterschiedliche Vignetten generiert, um vier verschiedene Variablen messen zu können. Bei diesen Variablen handelte es sich umd die Gewaltart (psychisch oder sexualisiert), das Geschlecht (männlich oder weiblich), den sozioökonomischen Status (hoch oder niedrig) und um den kulturellen Hintergrund (deutsch oder arabisch). Über einen Schiberegler konnten die Probanden die relative Verantwortung von Opfer und Täter bewerten. Die Codierung verlief vom kleinstmöglichen Punktewert auf der linken Seit bis zum größtmöglichen Punktewert auf der rechten Seite (Codierung 1-101). Eine solchen Vignette war wie folgt gegeben: %TEXT
 
-Die Akzeptanz von häuslichen Gewaltmythen wurden mithilfe der deutschen Übersetzung des englischen Domestic Violence Myth Acceptance Scale (DVMAS) \parencite{Peters2003} unternommen. Bis auf das letzte Item sind alle übrigen 17 Items als Aussagen vormuliert und wurden mithilfe einer siebenstufigen Skala, von 1 = \enquote{Stimme überhaupt nicht zu} bis 7 = \enquote{Stimme völlig zu}, beantwortet. Für die deutsche Übersetzung des DVMAS liegt bislang noch keine Validierung vor. Da es hierbei um eine Sinngemäße Übersetzung handelt wird die Reliabilität und Validität des originalen DVMAS herangezogen. Die Reliabilität von Cronbachs-\textalpha~=~.88 liegt in einem sehr gute Bereich. Des Weiteren liegt auch eine gute Validität vor, zumal der DVMAS signifikante Korrelationen mit den folgenden vier theoretisch ähnelnden Skalen aufweist: Attitude Towards Women, Rape Myth acceptance scale, Sex Role Stereotypes und Attitude Towards Wife Abuse \parencite{DVMAS_Peters}.
+Die Akzeptanz von häuslichen Gewaltmythen wurden mithilfe der deutschen Übersetzung des englischen Domestic Violence Myth Acceptance Scale (DVMAS) \parencite{Peters2003} unternommen. Bis auf das letzte Item sind alle übrigen 17 Items als Aussagen vormuliert und wurden mithilfe einer siebenstufigen Skala, von 1 = \enquote{Stimme überhaupt nicht zu} bis 7 = \enquote{Stimme völlig zu}, beantwortet. Ein solches Item war wie folgt: %TEXT
+Für die deutsche Übersetzung des DVMAS liegt bislang noch keine Validierung vor. Da es hierbei um eine Sinngemäße Übersetzung handelt wird die Reliabilität und Validität des originalen DVMAS herangezogen. Die Reliabilität von Cronbachs-\textalpha~=~.88 liegt in einem sehr gute Bereich. Des Weiteren liegt auch eine gute Validität vor, zumal der DVMAS signifikante Korrelationen mit den folgenden vier theoretisch ähnelnden Skalen aufweist: Attitude Towards Women, Rape Myth acceptance scale, Sex Role Stereotypes und Attitude Towards Wife Abuse \parencite{DVMAS_Peters}.
 
-Das letzte erhobene Konstrukt Aggression wurde mithilfe des Deutschen Aggressionsfragebogens erfasst. Dieser umfasst 29 Items verteilt auf den folgenden vier Subskalen: physische Aggression, verbale Aggression, Ärger und Misstrauen. Die als Aussage formulierten Items wurden anhand einer vier-stufigen Likertskala von 1 = \enquote{trifft nich zu} bis 4 = \enquote{trifft voll zu} beantwortet. Die Validität des Fragebogens wurde durch die signifikante Korrelationen mit Aggressivität, generalisierter Selbstwert, Ärger, Ärgerkontrolle und Neurotizismus festgestellt. Die Reliabilität variiert zwischen \textalpha~=~.62 und \textalpha~=~.82 (Cronbachs-\textalpha der Subskalen) und weißt eine Retestreliabilität von Cronbachs-\textalpha~=~.73\parencite{Aggressionsfragebogen}.
+Das letzte erhobene Konstrukt Aggression wurde mithilfe des Deutschen Aggressionsfragebogens erfasst. Dieser umfasst 29 Items verteilt auf den folgenden vier Subskalen: physische Aggression, verbale Aggression, Ärger und Misstrauen. Die als Aussage formulierten Items wurden anhand einer vier-stufigen Likertskala von 1 = \enquote{trifft nich zu} bis 4 = \enquote{trifft voll zu} beantwortet. Ein solches Item war wie folgt: %TEXT
+Die Validität des Fragebogens wurde durch die signifikante Korrelationen mit Aggressivität, generalisierter Selbstwert, Ärger, Ärgerkontrolle und Neurotizismus festgestellt. Die Reliabilität variiert zwischen \textalpha~=~.62 und \textalpha~=~.82 (Cronbachs-\textalpha der Subskalen) und weißt eine Retestreliabilität von Cronbachs-\textalpha~=~.73\parencite{Aggressionsfragebogen}.
+
+Die Reliabilität ist aufgrund des standatisierten Fragebogens gegeben. Es kann auch von einer gegebenen Objektivität ausgegangen werden, weil ohne einen Versuchsleiter die Probanden den Fragebogen eigenständig durchgeführten mussten. Aufgrund der Relevanz dieser Befragung ist sie valide.
 
 
 %Fragestellung und Hypothesen hier dazwischen (Sophia)
@@ -38,18 +41,22 @@ Das letzte erhobene Konstrukt Aggression wurde mithilfe des Deutschen Aggression
 
 Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit, wie auch die garantierte Anonymität der Probanden aufgeklärt. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige ist. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden ist. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten, wie eine kleine Aufklärung diesbezüglich. Jeweils nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation. Anschließend folgten die deutsche Übersetzung des DVMAS und der Deutsche Aggressionsfragebogen. Zum Schluss wurden die Probanden gebeten einige kurze Angaben zu ihrer Person zu geben, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt gewährleistet. 
 
+Mit Abschließen der befragung wurden die Probanden, die über das SONA-System kamen wieder dorthin zurückgeführt und ihnen wurden 0.25 Versuchspersonenstunden angerechnet.
+
 Potenzielle Störvariablen konnten während der Untersuchungsdurchführung nicht kontrolliert werden. Anhand der Onlinebefragung lag die Entscheidung, zu welchem Zeitpunkt, an welchem Ort und unter welchen Bedingungen die Befragung bearbeitet wurde, bei den Teilnehmern selbst.
 
 
 \section{Auswertungsmethode}    \label{sec_3.5}
-Der erhobene Datensatz wurde mithilfe der Statistik- und Analysesoftware SPSS berechnet. Bevor die Hypothesen jedoch berechnet werden konnten, musste der Datensatz bereinigt werden. So, wie die Fallvignetten im Fragebogen konzipiert war, musste der Datensatz verdoppelt werden, damit mit den Daten der Vignetten gerechnet werden konnte. 
+Der erhobene Datensatz wurde mithilfe der Statistik- und Analysesoftware SPSS berechnet. Bevor die Hypothesen jedoch berechnet werden konnten, musste der Datensatz bereinigt werden. So, wie die Fallvignetten im Fragebogen konzipiert waren, musste der Datensatz verdoppelt werden, damit mit den Daten der Vignetten gerechnet werden konnte. 
 
-Anschließend konnten die Daten ausgewertet werden, beginnend mit den deskriptiven Kennzahlen drei Konstrukte. Anhand der Lageparameter, der Maße der Streuung und der Verteilung konnten die demographischen Daten der Stichprobe ausgewertet werden.
+Anschließend konnten die Daten ausgewertet werden, beginnend mit den deskriptiven Kennzahlen der drei Konstrukte. Anhand der Lageparameter, der Maße der Streuung und der Verteilung konnten die demographischen Daten der Stichprobe ausgewertet werden.
 
-Damit die Fallvignetten wie auch der Aggressionsfragebogen für die Berechnungen genutzt werden konnte, mussten jeweils einige Items umgepolt werden. Damit bei den Vignetten den betroffenen Person stets der Zahlenwert 101 (Schieberegler rechts) zugeordnet wird, wurden jeweils bei den psychischen und sexualisierten Vignetten drei Fälle umkodiert. Ferner beinhalteten die Vignetten weitere Variablen, die für die Auswertung bei dieser Arbeit, wie auch bei den Auswertungen der weiteren Projektmitglieder wichtig waren. Für die individuelle Verwendung dieser, wurden sie aus den entsprechenden Fallvignetten extrahiert, jeweils zu einer separaten dummy-kodierten Variable dichotomisiert. Beim Aggressionsfragebogen wurden Item 14 "Ich bin eine ausgeglichene Person." und Item 22 "Ich kann mir keinen Grund vorstellen, weshalb ich jemals eine andere Person schlagen würde." umgepolt.
+Damit die Fallvignetten wie auch der Aggressionsfragebogen für die Berechnungen genutzt werden konnten, mussten jeweils einige Items umgepolt werden. Damit bei den Vignetten den betroffenen Person stets der Zahlenwert 101 (Schieberegler rechts) zugeordnet wird, wurden jeweils bei den psychischen und sexualisierten Vignetten drei Fälle umkodiert. Ferner beinhalteten die Vignetten weitere Variablen, die für die Auswertung bei dieser Arbeit, wie auch bei den Auswertungen der weiteren Projektmitglieder wichtig waren. Für die individuelle Verwendung dieser, wurden sie aus den entsprechenden Fallvignetten extrahiert und jeweils zu einer separaten dummy-kodierten Variable dichotomisiert. Beim Aggressionsfragebogen wurden Item 14 "Ich bin eine ausgeglichene Person." und Item 22 "Ich kann mir keinen Grund vorstellen, weshalb ich jemals eine andere Person schlagen würde." umgepolt.
 
 Die in Kapitel ~\ref{sec_3.4} bereits erwähnten Manipulationschecks wurden mithilfe des Chi$^2$-Tests berechnet.
 
-Zur Beantwortung der ersten beiden Hypothese (H1 und H2) wurde eine Pearson-Moment-Korrelationen berechnet. Bei der H1 wurde eine positive Korrelationen zwischen dem Aggressionsscore und der Verantwortungszuschreibung auf das Opfer untersucht. Für die H2 wurde die positive Korrelationen des Aggressionsscores mit der Akzeptanz von Gewaltmythen untersucht. Voraussetzungen für diesen Test sind, die Intervallskalierung oder Dichotomie beider Variablen, eine bestehende Linearität, die Abwesenheit von Ausreißern, sowie die Endlichkeit der Varianz bzw. Kovarianz.
+Zur Beantwortung der ersten Hypothese (H1) wurde eine Spearman-Rang-Korrelation berechnet. Es wurde eine positive Korrelationen zwischen dem metrischen Aggressionsscore und der ordinalen Verantwortungszuschreibung auf das Opfer untersucht. Die Ordinalskalierung mindestens einer Variablen, sowie die paarweise Beobachtung sind die Vorraussetzungen für diesen Test.
+
+Für die zweite Hypothese (H2) wurde eine Pearson-Moment-Korrelationen gerechnet, um die positive Korrelationen des metrischen Aggressionsscores mit der metrischen Akzeptanz von Gewaltmythen untersucht. Voraussetzungen für diesen Test sind, die Intervallskalierung oder Dichotomie beider Variablen, eine bestehende Linearität, die Abwesenheit von Ausreißern, sowie die Endlichkeit der Varianz bzw. Kovarianz.
 
 Bei der dritten Hypothese (H3) handelte es sich um eine Moderationsanalyse, die mithilfe des Plug-in PROCESS berechnet wurde. Untersucht wurde bei dieser Hypothese ob das Geschlecht den Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression moderiert. Die allgemeinen Vorraussetzung für diesen Test sind die Linearität und der Stichprobenumfang. Des Weiteren gibt es spezifische Voraussetzungen. Eine gegebene Homoskedastizität, Normalverteilung des Fehlers, keine Autokorrelation und keine Multikolinearität müssen gegeben sein.
