--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -20,39 +20,42 @@ Beim Deutschen Aggressionsfragebogen wurde ein Mittelwert von $M$~=~1.88 ($SD$~=
 Nachfolgend werden die Ergebnisse der vier Manipulationschecks in der folgenden Reihenfolge aufgeführt: Gewaltart, Geschlecht des Opfers, soziökonomischer Status der betroffenen Person und abschließend der Kulturelle Hintergrund.
 Wie zuvor erklärt, musste der Datensatz verdoppelt werden, um eine berechnung mit den Daten gewährleisten zu können. Aus diesem Grund wird in diesem und den nachfolgenden Kapiteln von einer Stichprobengröße von $N_{neu}$~=~864 ausgegangen.
 
+\input{4 Ergebnisse/Tabelle Manipulationscheck.tex}
+\input{4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex}
 Bei der Überprüfung der Gewaltart gaben bei Vignetten sexualisierter Gewalt 354 Personen (91.70\%) an eine solche Gewaltart behandelt zu haben. Handelte es sich um eine psychische Gewaltart an, reichten nur 400 Personen (83.70\%) die richtige Antwort ein. Der durchgeführte Chi$^2$-Test viel mit einem Wert von 485.53 signifikant aus ($p<$.001). 
+In Tabelle~\ref{KT_G} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
 
 War die Nachfrage auf das Geschlecht des Opfers gerichtet gaben die 411 (96.70\%) bzw. 423 (96.40\%) Probanden an, es handelte sich um ein weibliches bzw. männliches Opfer. Auch dieser Chi$^2$-Test war mit einem Wert von 748.16 hoch signifikant ($p<$.001). 
-
+In Tabelle~\ref{KT_sex} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
 
 Die Überprüfung des niedrigen soziökonomischen Status des Opfers wurde von 389 (80.2\%) bei dessen Gegebenheit richtig beanwortet. Bei der gegenteiligen Situation stieg die Rate der richtigen Antworten auf 342 (90.20\%). Mit einem Wert von 422.37 fiel dieser Chi$^2$-Test ebenfalls signifikant aus ($p<$.001). 
+In Tabelle~\ref{KT_SES} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
+\input{4 Ergebnisse/Tabelle KT SES.tex}
 
+\input{4 Ergebnisse/Tabelle KT kult.tex}
 Die höchste Rate an Richtigkeit gab es bei dem Manipulationscheck des kulturellen Status. Hier gaben 422 (97.70\%) Personen bzw. 423 (97.90\%) die richtige Antwort. Auch dieser Chi$^2$-Test ist mit einem Wert von 789.68 signifikant ($p<$.001). 
+In Tabelle~\ref{KT_kult} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
 
-\input{4 Ergebnisse/Kreuztabelle.tex}
-In Tabelle ~\ref{Kreuztabelle} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
+
+
 
 
 \section{Inferenzstatistische Ergebnisse}    \label{sec_4.3}
-Ergebnisse der Hypothesentests
+Anschließend erfolgt eine inferenzstatistische Analyse der erhobenen Daten zur Fesstellung der Korrelationen zwischen den in Kapitel~\ref{ch_2} näher gebrachten Konstrukte Aggression, Akzeptanz der Gewaltmythen und die Verantwortungszuschreibung. 
 
 
 \subsection{Hypothese 1}    \label{subsec_4.3.1}
-hier Vorraussetzungsergebnisse statistisch darlegen
-% https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
-metrische Skalen beider Variablen
-keine Ausreißer
-linearer Zusammenhang zwischen Variablen
-Bivariate Normalverteilung -> zentralen Grenzwertsatz heranziehen/ mit Bootstraping arbeiten
+Die Hypothese 1 geht von einer Korrelation des Aggressionsscores mit victim blaming aus. Diese ungerichtete Zusammenhangshypothese wurde mit der Spearman$-$Rang$-$Korrelation berechnet.
+Die in Kapitel ~\ref{sec_3.5} erwähnten Voraussetzungen für diesen Test sind, dass das Skalenniveau mindestens einer Variable ordinalskaliert ist. Die Variable des victim blaming ist in diesem Fall ordinal skaliert und somit ist diese Voraussetzung erfüllt. Auch die weitere Voraussetzung der paarweisen Beobachtung ist gegeben, da in SPSS eine Zeile die Erhebung einer Person darstellt. 
 
+Das in Tabelle~\ref{H1_Spearman} ersichtliche Ergebnis der Spearman$-$Rang$-$Korrelation fiel nicht signifikant aus ($p$~=~n.s.). Mit dem sehr kleinen Effekt \parencite{Cohen_1992} von $r_s $~=~.05, korreliert die Aggression nur sehr gering mit der Schuldzuweiseung auf das Opfer. 
+\input{4 Ergebnisse/Tabelle H1 Spearman.tex}
 
 \subsection{Hypothese 2}    \label{subsec_4.3.2}
-hier Vorraussetzungsergebnisse statistisch darlegen
-% https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
-metrische Skalen beider Variablen
-keine Ausreißer
-linearer Zusammenhang zwischen Variablen
-Bivariate Normalverteilung -> zentralen Grenzwertsatz heranziehen/ mit Bootstraping arbeiten
+Die Voraussetzung einer Pearson$-$Produkt$-$Moment$-$Korrelation wurden in ~\ref{sec_3.5} bereits aufgeführt. In diesem Falle sind auch alle Voraussetzungen gegeben: Aggression und die Akzeptanz von Gewaltmythen sind metrisch, die vorhandenen Ausreißer sind im akzeptablen Bereich, es liegt ein linearer Zusamenhang zwischen den Variablen vor und eine bivariate Normalverteilung ist auch gegeben.
+
+Die in Tabelle~\ref{H2_Pearson} ersichtliche Pearson$-$Produkt$-$Moment$-$Korrelation zeigte einen Zusammenhang von $r$~=~.38. Nach \textcite{Cohen_1992} entspricht dies einer mittelgroßen Korrelation, die bei einseitiger Testung statistisch signifikant ausfiel ($p<$ .001).
+\input{4 Ergebnisse/Tabelle H2 Pearson.tex}
 
 
 \subsection{Hypothese 3}    \label{subsec_4.3.3}
@@ -60,13 +63,8 @@ hier Vorraussetzungsergebnisse statistisch darlegen
 %https://statistikguru.de/spss/moderation/voraussetzungen-14.html 
 Linearität
 Normalverteilung der Residuen (unwichtig, weil SP groß)
-Homoskedastizität -> Schätzfehler über alle vorhergesagten y-Werte relativ gleich
+Homoskedastizität -> Schätzfehler über alle vorhergesagten y-Werte relativ gleich (gibt Heteroskedastizität in Residuen weil $p$~=~.03 beim White Test dadurch sind die Ergebnisse der Moderation nicht mehr sinnvoll interpretierbar)
 Unabhängigkeit
-
-
-
-
-
 
 Moderation: 14.31\% der Varianz des DVMAS werden durch das Modell erklärt.
 Modell erklärt tatsächlich etwas, weil p kleiner .01 ist.
@@ -80,4 +78,29 @@ Eine Moderationsanalyse wurde durchgeführt, um zu bestimmen, ob die Interaktion
 
 
 \section{Explorative Ergebnisse}    \label{sec_4.4}
+Zusätzlich zu den untersuchten Hypothesen wurden noch weitere explorative Untersuchungen getätigt. In Kapitel~\ref{subsec_4.4.1} wurde getestet, ob die Subskalen von Aggression positiv mit dem DVMAS und mit dem Geschlecht der Probanden korreliert. Des Weiteren wurde Aggression mit dem kultuerllen Hintergrund der Probanden (vgl. Kapitel~\ref{subsec_4.4.2}) korreliert. Der Deutsche Aggressionsfragebogen unterlief zwei Unterschiedtestungen. In Kapitel~\ref{subsec_4.4.3} wurde exploriert, ob sich die Aggressionsausprägung zwischen den kulturellen Hintergründen unterscheidet und in Kapitel~\ref{subsec_4.4.4} mit den biologischen Geschlechtern der Probanden.
 
+\subsection{Korrelation Aggresion-Subskalen mit DVMAS und Geschlecht}  \label{subsec_4.4.1}
+Für die Korrelation zwischen den vier Aggressions-Subskalen physiche Aggression, verbale Aggression, Ärger und Misstrauen und der Akzeptanz von Gewaltmythen wurde eine Pearson-Moment-Korrelation berechnet, denn alle Variablen sind metrisch skaliert. An den, in Tabelle XX, kursiv gesetzten $r-$Werte ist erkennbar, dass alle Subskalen unter sich signifikant sind und, dass sie jeweils mit dem DVMAS positiv korrelieren. 
+
+Die Korrelation von physische Aggression mit der verbalen weist einen mittleren Effekt ($r$~=~.42, $p<$~.001) auf. Ärger und physiche Aggression zeigen eine starke Korrelieren mit $r$~=~.52 auf ($p<$~.001). Die physische Aggression korreliert mittelgradig mit Ärger und Misstrauen ($r$~=~.32 und $r$~=~.38 bei $p<$~.001).
+Die verbale Aggression korrelierte mittelgradig mit Ärger ($r$~=~.45, $p<$~.001) und Misstrauen ($r$~=~.30, $p<$~.001).
+Die Subskala Ärger wies eine mittelgradig Korrelation mit Misstrauen ($r$~=~.48, $p<$~.001) auf.
+
+Der DVMAS wies bei der physichen Aggression ($r$~=~.38, $p<$~.001) eine mittelgradig Korrelation auf und bei den drei weiteren Subskalen verbale Aggression ($r$~=~.27, $p<$~.001), Ärger ($r$~=~.25, $p<$~.001) und Misstrauen ($r$~=~.24, $p<$~.001) jeweils eine schwache Korrelation auf.
+
+Das Geschlecht zeigte eine mittelgradig negative Korrelation mit der physischen Aggression da ($r$~=~$-$.25, $p<$~.001). Mit der varbalen Aggression korreliert das Geschlecht schwach negativ ($r$~=~$-$.16, $p<$~.001). Mit den beiden Subskalen Ärger ($r$~=~.07, $p$~=~.020) und Misstrauen ($r$~=~.09, $p$~=~.006) zeigte sich jeweils eine schwache Korrelation mit dem biologischen Geschlecht der Probanden.
+
+
+\subsection{Korrelation Aggression mit kulturellem Hintergrund der Probanden}   \label{subsec_4.4.2}
+Die mittelgradig negative Korrelation zwischen dem kulturellen Hintergrund der Probanden und dem Aggressionsscore zeigt mit $r$~=~$-$.26 ein signifikantes Ergebnis ($p<$~.001). Die Werte dieser Korrelation sind in Tabelle XX zusammengefasst.
+
+
+\subsection{Unterscheidung Aggression mit kulturellem Hintergrund der Probanden}   \label{subsec_4.4.3}
+Für die Untersuchung der Aggressionsausprägung bei Probanden mit arabischem Hintergrund verglichen mit denen eines anderen Hintergrundes, wurde ein t-Test für unabhängige Stichproben gerechnet. Mit $F$~=~.058 viel der Levene Test nicht signifikant aus ($p$~=~n.s.) und entspricht einer Varianzgleichheit. 
+Der Unterschied zwischen den Probanden mit arabischen Hintergründen und denen ohne war signifikant ($t$(858)~=~7.78, $p<$~.001). Die Aggression war bei den Probanden ohne arabischen Hintergrund durchschnittlich 0.77 Einhaeiten niedriger (95\%$-$CI[0.58, 0.96]).
+
+
+\subsection{Unterscheidung Aggression mit Geschlecht der Probanden}   \label{subsec_4.4.4}
+Auch die explorative Untersuchung der Differenz zwischen den biologischen Geschlechtern in Anbetracht der Aggression, wurde mithilfe des t-Tests für unabhängige Stichproben getestet. Der Levene Test fiel mit $F$~5.715 signifikant aus. Das bedeutet, dass durch die Varianzunterschiede es zu falsche Schlüsse aus dem t-Test kommen kann.
+Der Unterschied zwischen Männern und Frauen war signifikant ($t$(433.64)~=~2.18, $p$~=~.0.30). Die Aggression war bei Männern durchschnittlich 0.07 Einhaeiten niedriger (95\%$-$CI[0.01, 0.14]).
