--- a/4 Ergebnisse/Tabelle KT SES.tex
+++ b/4 Ergebnisse/Tabelle KT SES.tex
@@ -2,7 +2,7 @@
     \caption[Kreuztabelle Manipulationscheck soziökonomischer Status des Opfers]{\textit {Kreuztabelle des Manipulationschecks des soziökonomischen Status der betroffenen Person}} 
     \label{KT_SES}
     \centering
-    \begin{adjustbox}{width=\textwidth}
+    \begin{adjustbox}{width=10cm} %{width=\textwidth}
     \small
     \begin{tabular}{lrrr}
       \hline
