--- a/4 Ergebnisse/Tabelle KT kult.tex
+++ b/4 Ergebnisse/Tabelle KT kult.tex
@@ -2,7 +2,7 @@
     \caption[Kreuztabelle Manipulationscheck kultureller Status]{\textit {Kreuztabelle des Manipulationschecks des kulturellen Status}} 
     \label{KT_kult}
     \centering
-    \begin{adjustbox}{width=\textwidth}
+    \begin{adjustbox}{width=6.5cm} %{width=\textwidth}
     \small
     \begin{tabular}{lrrr}
       \hline
