--- a/4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex
+++ b/4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex
@@ -2,7 +2,7 @@
     \caption[Kreuztabelle Manipulationscheck Opfergeschlecht]{\textit {Kreuztabelle des Manipulationschecks des Geschlecht der betroffenen Person}} 
     \label{KT_sex}
     \centering
-    \begin{adjustbox}{width=\textwidth}
+    \begin{adjustbox}{width=10cm} %{width=\textwidth}
     \small
     \begin{tabular}{lrrr}
       \hline
