--- a/4 Ergebnisse/Tabelle Manipulationscheck.tex
+++ b/4 Ergebnisse/Tabelle Manipulationscheck.tex
@@ -2,7 +2,7 @@
     \caption[Kreuztabelle Manipulationscheck Gewaltart]{\textit {Kreuztabelle des Manipulationschecks der Gewaltart}} 
     \label{KT_G}
     \centering
-    \begin{adjustbox}{width=\textwidth}
+    \begin{adjustbox}{width=10cm} %{width=\textwidth}
     \small
     \begin{tabular}{lrrr}
       \hline
