--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -1,4 +1,7 @@
 \chapter{Diskussion}   \label{ch_5}
+Der abschließende Diskussionskapitel beginnt mit einer Zusammenhang der zentralen Ergebnisse. Daraufhin folgt die Interpretation dieser und die Einordnung in den aktuellen wissenschaftlichen Forschungsstand. Im folgenden Zug werden die verwendeten Methoden Bewertet. Die Arbeit endet mit theoretischen und oder praktischen Implikationen für die zukünftige Forschung.
+
+
 \section{Zusammenfassung der zentralen Ergebnisse}  \label{sec_5.1}
 Ergebnisse und ihre Implikation für die Gültigkeit der empirischen Hypothesen zusammengefasst
 
