--- a/Quellen.bib
+++ b/Quellen.bib
@@ -113,10 +113,10 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% bei allen online-Quellen wirds nicht kursiv gemacht
+% bei allen booklet-Quellen wirds nicht kursiv gemacht
 
 % Einleitung: Zitat
-@online{Friedrich_Hacker,
+@booklet{Friedrich_Hacker,
   author      = {zitate.eu},
   year        = {2022},
   title       = {Zitate von Prof.Dr. Friedrich Hacker},
@@ -153,14 +153,14 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   doi            = {https://doi.org/10.1007/978-3-531-93006-0_2}
 }
 
-@online{Def_Aggression_Duden,
+@booklet{Def_Aggression_Duden,
   author        = {Duden},
   title         = {Aggression},
   year          = {2022},
   url           = {https://www.duden.de/rechtschreibung/Aggression}
 }
 
-@online{was_Aggression,
+@booklet{was_Aggression,
   author          = {{Verwaltungs-Berufsgenossenschaft}},
   shortauthor     = {VBG},
   title           = {Was ist Aggression?},
@@ -188,28 +188,28 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   doi             = {https://doi.org/10.1080/01612840490486755},
 }
 
-@online{Def_Aggressivität_Duden, 
+@booklet{Def_Aggressivität_Duden, 
   author        = {Duden},
   title         = {Aggressivität},
   year          = {2022},
   url           = {https://www.duden.de/rechtschreibung/Aggressivitaet}
 }
 
-@online{Def_Aggressivität_Spektrum,
+@booklet{Def_Aggressivität_Spektrum,
   author        = {Spektrum},
   title         = {Lexikon der Psychologie: Aggressivität},
   year          = {2022},
   url           = {https://www.spektrum.de/lexikon/psychologie/aggressivitaet/346}
 }
 
-@online{Def_Aggressivität_eng1,
+@booklet{Def_Aggressivität_eng1,
   author        = {Alexa Clark},
   title         = {Aggressiveness},
   year          = {2021},
   url           = {https://psychoques.com/aggressiveness/}
 }
 
-@online{Def_Aggressivität_vs_violence,
+@booklet{Def_Aggressivität_vs_violence,
   author        = {Alexa Clark},
   title         = {Differences between aggressiveness and violence},
   year          = {2021},
@@ -250,28 +250,28 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   doi           = {10.6102/zis52},
 }
 
-@online{Gewalt_Duden,
+@booklet{Gewalt_Duden,
   author        = {Duden},
   title         = {Gewalt},
   year          = {2022},
   url           = {https://www.duden.de/rechtschreibung/Gewalt}
 }
 
-@online{impulsive_aggro_psych_Störung,
+@booklet{impulsive_aggro_psych_Störung,
   author        = {Amann, B. H.},
   title         = {A Clinician's Guide to Impulsive Aggression},
   year          = {2022},
   url           = {https://www.additudemag.com/impulsive-aggression-clinicians-guide/},
 }
 
-@online{impulsive_aggro,
+@booklet{impulsive_aggro,
   author        = {AlleyDog.com},
   title         = {Impulsive Aggression},
   year          = {2022},
   url           = {https://www.alleydog.com/glossary/definition.php?term=Impulsive+Aggression},
 }
 
-@online{impulsive_instrumental_aggro_healtline,
+@booklet{impulsive_instrumental_aggro_healtline,
   author        = {Gabbey, A. E. and Raypole, C.},
   editor        = {Dr. Juby, B.},
   title         = {Aggressive Behaviou: Unterstanding Aggression and How to Treat It},
@@ -279,28 +279,28 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   url           = {https://www.healthline.com/health/aggressive-behavior},
 }
 
-@online{instrumental_aggro,
+@booklet{instrumental_aggro,
   author         = {Nickerson, C.},
   title          = {Instrumental Aggression: Definition und Examples},
   year           = {2022},
   url            = {https://www.simplypsychology.org/instrumental-aggression.html},
 }
 
-@online{instrumental_dictionary,
+@booklet{instrumental_dictionary,
   author         = {Kent, M.},
   title          = {The Oxford Dictionary of Sports Science und Medicine},
   year           = {2007},
   url            = {https://www.oxfordreference.com/view/10.1093/acref/9780198568506.001.0001/acref-9780198568506-e-3546)},
 }
 
-@online{physische_verbale_aggro,
+@booklet{physische_verbale_aggro,
   author        = {University of Minnesota},
   title         = {10.1 Defining Aggression},
   year          = {2022},
   url           = {https://open.lib.umn.edu/socialpsychology/chapter/10-1-defining-aggression/},
 }
 
-@online{physische_verbale_aggro_2,
+@booklet{physische_verbale_aggro_2,
   author        = {vioenTia},
   title         = {Definitionen: Aggression und Gewalt in der Psychologie},
   year          = {2022},
@@ -421,7 +421,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   doi            = {https://doi.org/10.1007/978-3-86226-848-1},
 }
 
-@online{Rad_der_Gewalt,
+@booklet{Rad_der_Gewalt,
   author        = {{Zentrale Informationsstelle Autonomer Frauenhäuser}},
   shortauthor   = {ZIA},
   title         = {Gewalt gegen Frauen},
@@ -532,4 +532,75 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   school      = {The University of Maine},
   title       = {The domestic violence myth acceptance scale: Development and psychometric testing of a new instrument},
   year        = {2003}
+}
+
+@article{H2_u_3_Bhogal_2016,
+  author          = {Bhogal, M.S. and Corbertt, S. },
+  journal         = {Psychiatry, Psychology and Law},
+  number          = {5},
+  title           = {The Influence of Aggressiveness on Rape-Myth Acceptance among University Students},
+  volume          = {23},
+  year            = {2016},
+  doi             = {doi: 10.1080/13218719.2016.1142931},
+  pages           = {709-715},
+}
+
+@misc{H1_connecting_dots,
+  title        = {Preventing Multiple Forms of Violence: A Strategic Vision for Connecting the Dots},
+  year         = {2016},
+  publisher    = {Centers for Disease Control and Prevention},
+  AUTHOR       = {{Division of Violence Prevention and National Center for Injury Prevention and Control}},
+}
+
+@article{H1_1993,
+  author          = {Gray, N.B. and Palileo, G.J. and Johnson, G.D.},
+  journal         = {Sociological Spectrum},
+  number          = {4},
+  title           = {Explaining rape victim blame: A test of attribution theory},
+  volume          = {13},
+  year            = {1993},
+  pages           = {377-392},
+  doi             = {10.1080/02732173.1993.9982040 },
+}
+
+@misc{H1_Poli_2022,
+  title        = {Häusliche Gewalt},
+  year         = {2022},
+  url          = {https://www.polizei-beratung.de/opferinformationen/haeusliche-gewalt/},
+  AUTHOR       = {{Polizeitliche Kriminalprävention der Länder und des Bundes}},
+}
+
+@mastersthesis{H1_malasia_2012,
+  author  = {Kassim, A. B. A.},
+  school  = {International Islamic University},
+  title   = {The relationship between exposure to domestic violence, victim blaming and aggressive behaviour among malysian adolescents},
+  year    = {2012}
+}
+
+@article{Cohen_1992,
+  author          = {Cohen, J.},
+  journal         = {Psychological Bulletin},
+  number          = {1},
+  title           = {A Power Primer},
+  volume          = {112},
+  year            = {1992},
+  pages           = {155-159},
+  doi             = {doi: 10.1037/0033-2909.112.1.155},
+}
+
+@article{H1_moderation_2020,
+  author          = {Rizwan, U. and Aqeel, M. and Irfan, S. and Rahna, T.},
+  journal         = {Vahria Journal of Professional Psychology},
+  title           = {Linking Aggression, Tolerance and Domestic Violence in Married Working Women; a Moderating Model},
+  year            = {2020},
+}
+
+@inbook{H1_Entwicklung,
+  author         = {Silbereisen, R. K. and Weichold, K.},
+  chapter        = {Jugend (12-19 Jahre},
+  editor         = {Schneider, W. and Lindenberger, U. (Hrsg.},
+  pages          = {235-258},
+  publisher      = {Weinheim: Beltz},
+  title          = {Entwicklungspsychologie},
+  year           = {2012}
 }
